syntax = "proto3";

option csharp_namespace = "NTDataHiveGrpcService";

import "google/protobuf/timestamp.proto";
import "Protos/status.proto";

package Feedback;

service FeedbackBackend {
	rpc SavePreEditing (PreEditingRecordRequest) returns (google.rpc.Status);
}

message	Feedback {

}

message PreEditingRecordRequest {
	string WebId = 1;
    string SupplierName = 2; 
    string QualityAssurance = 3;
    string PublisherName = 4;
    string JournalId = 5;
    string ArticleId = 6;
    string CopyEditedBy = 7;
    double PageCount = 8;
    double ErrorCount = 9;
    string DescriptionOfError = 10;
    string Matter = 11;
    string ErrorLocation = 12; 
    string ErrorCode = 13;
    string ErrorType = 14;
    string ErrorSubtype = 15;
    string ErrorCategory = 16;
    string IntroducedOrMissed = 17;
    string Department = 18;
    string EmployeeName = 19;
    string RootCause = 20;
    string CorrectiveAction = 21; 
    string NatureOfCA = 22;
    string OwnerOfCA = 23;
    google.protobuf.Timestamp TargetDateOfCompletionCA = 24;
    string PreventiveMeasure = 25;
    string NatureOfPM = 26;
    string OwnerOfPM = 27;
    google.protobuf.Timestamp TargetDateOfCompletionPM = 28; 
    string StatusOfCA = 29;
    string StatusOfPM = 30;
    string CopyEditingLevel = 31; 
	google.protobuf.Timestamp createdAt = 32;

	google.rpc.Status status = 99;
}


message PreEditingRecordArray {
    repeated PreEditingRecordRequest items = 1;

    google.rpc.Status status = 99;
}